# icfpcontest2020

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  dummy.txt  run.sh  setup.py
app/: alien.hpp  build  eval.hpp  expr.hpp  flat_expr.hpp  galaxy.cpp  galaxy.hpp  interact.hpp  main.cpp  main.py  modem.cpp  modem.hpp  pow2.cpp  riddle.hpp  run  simple_expr.hpp  util.hpp
parser/haskell/: annotate.hs  build.sh  print_message.sh
tests/: checkerboard.py  conftest.py  galaxy.py  interact.py  statefuldraw.py  statelessdraw.py  test_algebra.py  test_alien_screen.py  test_api.py  test_basic.py  test_draw.py  test_functional.py  test_interact.py  test_modem.py  test_screen.py  test_transpiler.py
wheels/: click_log-0.3.2-py2.py3-none-any.whl  icfpcontest2020-0.1-py3-none-any.whl  zebv-0.1-py3-none-any.whl
zebv/: __init__.py  api.py  app.py  calc.py  draw.py  eval.py  expression.py  game_state.py  interact.py  logging.py  modem.py  node.py  operators.py  parsing.py  patterns.py  screen.py  transpile.py  var_map.py
zebv/app/: main.py
